--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -40,7 +40,7 @@
 </table>
 
 
-  <a class="button" href = "list" >・一覧へ・</a><br>
+  <a class="button" href = "list" >・一覧へ・</a>
   <a class="button" href = "top" >・TOPへ・</a><br>
 </body>
 </html>
