--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -1,6 +1,6 @@
 <html lang="ja" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-<title>無料トライアルリマインダー</title>
+<title>Trial Reminder</title>
 <meta charset="UTF-8">
   
       <!-- CSS -->
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-  <h1>無料トライアルリマインダー</h1>
-  <a class="button" href = "new" >・サイト新規登録・</a><br>
-  <a class="button" href = "list" >・契約サイト一覧・</a>
+  <h1 class="trial">Trial Reminder</h1>
+  <a class="topbutton" href = "new" >・サイト新規登録・</a><br>
+  <a class="topbutton" href = "list" >・契約サイト一覧・</a>
 </body>
 </html>
